update link sito
Ora tutti i link aprono una nuova scheda

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <dl>
 
                         <ul>
-                            <li> <a href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Lettera_di_Presentazione.pdf">Lettera di presentazione</a> </li>  
-                            <li> <a href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Preventivo costi/Preventivo_costi.pdf">Preventivo costi e assunzione tempi</a> </li>
-                            <li> <a href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Analisi capitolati/Analisi_capitolati.pdf">Analisi capitolati</a> </li>
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Lettera_di_Presentazione.pdf">Lettera di presentazione</a> </li>  
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Preventivo costi/Preventivo_costi.pdf">Preventivo costi e assunzione tempi</a> </li>
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Analisi capitolati/Analisi_capitolati.pdf">Analisi capitolati</a> </li>
                         </ul>
 
                     </dl>
@@ -60,8 +60,8 @@
                     <dt class="verbali">Verbali Interni
                         <dd>
                             <ul>
-                                    <dd><li> <a href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023-10-19.pdf">Verbale del 19/10/2023 </a> </li> </dd>
-                                    <dd><li> <a href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023-10-25.pdf">Verbale del 25/10/2023 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023-10-19.pdf">Verbale del 19/10/2023 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023-10-25.pdf">Verbale del 25/10/2023 </a> </li> </dd>
                               
                             </ul>
 
@@ -71,7 +71,7 @@
                     <dt class="verbali">Verbali esterni
                         <dd>
                             <ul>
-                                    <dd><li> <a href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Esterni/2023-10-27.pdf">Verbale del 27/10/2023</a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Esterni/2023-10-27.pdf">Verbale del 27/10/2023</a> </li> </dd>
                             </ul>
 
                         </dd>
@@ -105,9 +105,9 @@
                 <p>Email: <a href="mailto:sweet16.unipd@gmail.com">sweet16.unipd@gmail.com</a></p>
                 <p>Riferimenti: 
                     <ul>
-                        <dd><li><a href="https://github.com/SWEet16-SWE-Group">GitHub del gruppo</a></li></dd>
-                        <dd><li><a href="https://www.math.unipd.it/~tullio/IS-1/2023/Progetto/C3.pdf">Capitolato Imola Informatica</a></li></dd>
-                        <dd><li><a href="https://stem.elearning.unipd.it/course/view.php?id=6958">Ingegneria del Software - Unipd</a></li></dd>
+                        <dd><li><a  target="_blank" href="https://github.com/SWEet16-SWE-Group">GitHub del gruppo</a></li></dd>
+                        <dd><li><a target="_blank" href="https://www.math.unipd.it/~tullio/IS-1/2023/Progetto/C3.pdf">Capitolato Imola Informatica</a></li></dd>
+                        <dd><li><a target="_blank" href="https://stem.elearning.unipd.it/course/view.php?id=6958">Ingegneria del Software - Unipd</a></li></dd>
                     </ul>
 
                 </p>            
