Update link per candidatura 2

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <dl>
 
                         <ul>
-                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Lettera_di_Presentazione.pdf">Lettera di presentazione</a> </li>  
-                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Preventivo costi/Preventivo_costi.pdf">Preventivo costi e assunzione tempi</a> </li>
-                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Analisi capitolati/Analisi_capitolati.pdf">Analisi capitolati</a> </li>
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Lettera_di_Presentazione_v2.0.0.pdf">Lettera di presentazione</a> </li>  
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Preventivo costi/Preventivo_costi_ed_assunzione_impegni_v2.0.0.pdf">Preventivo costi e assunzione tempi</a> </li>
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Analisi capitolati/Analisi_capitolati_v2.0.0.pdf">Analisi capitolati</a> </li>
                         </ul>
 
                     </dl>
@@ -60,9 +60,9 @@
                     <dt class="verbali">Verbali Interni
                         <dd>
                             <ul>
-                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023-10-19.pdf">Verbale del 19/10/2023 </a> </li> </dd>
-                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023-10-25.pdf">Verbale del 25/10/2023 </a> </li> </dd>
-                              
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023_10_19_v1.0.0.pdf">Verbale del 19/10/2023 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023_10_25_v1.0.0.pdf">Verbale del 25/10/2023 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Interni/2023_11_06_v1.0.0.pdf">Verbale del 06/11/2023 </a> </li> </dd>
                             </ul>
 
                         </dd>
@@ -71,7 +71,7 @@
                     <dt class="verbali">Verbali esterni
                         <dd>
                             <ul>
-                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Esterni/2023-10-27.pdf">Verbale del 27/10/2023</a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Esterni/2023_10_27_v2.0.0">Verbale del 27/10/2023</a> </li> </dd>
                             </ul>
 
                         </dd>
