--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <dt class="verbali">Verbali esterni
                         <dd>
                             <ul>
-                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Esterni/2023_10_27_v2.0.0">Verbale del 27/10/2023</a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Verbali/Esterni/2023_10_27_v2.0.0.pdf">Verbale del 27/10/2023</a> </li> </dd>
                             </ul>
 
                         </dd>
