--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
 
             <div class="logo">
-                <a href="https://github.com/SWEet16-SWE-Group"><img id="header-logo" src="img/logo quadrato.jpeg" alt=""></a>
+                <a href="https://github.com/SWEet16-SWE-Group"><img id="header-logo" src="img/logo quadrato.jpg" alt="SWEet16"></a>
                 <p id="titolo">SWEet16 - SWE Group</p> 
             </div>
             
