Aggiunta verbali interni

--- a/index.html
+++ b/index.html
@@ -86,7 +86,21 @@
                 <h3>RTB</h3>
 
                 <p>"Requirements and Technology Baseline", prima revisione di progetto.</p>
-                <p>Coming soon...</p>
+                
+                <div class="docs-container">
+
+                    <dt class="verbali">Verbali Interni
+                        <dd>
+                            <ul>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2023_11_10_v1.0.0.pdf">Verbale del 10/11/2023 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2023_11_16_v1.0.0.pdf">Verbale del 16/11/2023 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2023_11_21_v1.0.0.pdf">Verbale del 21/11/2023 </a> </li> </dd>
+
+                            </ul>
+
+                        </dd>
+                    </dt>
+                </div>
             </section>
 
             <section id="cs">
