--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                 
                 <div class="docs-container">
 
+                    <dt class="interni">Documentazione interna
+                        <dd>
+                            <ul>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Norme_di_progetto_v1.0.0.pdf">Norme di Progetto v1.0.0</a></li></dd>
+                            </ul>
+                        </dd>
+                    </dt>
                     <dt class="verbali">Verbali Interni
                         <dd>
                             <ul>
