aggiunta documentazione esterna

--- a/index.html
+++ b/index.html
@@ -104,9 +104,19 @@
                                     <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2023_11_21_v1.0.0.pdf">Verbale del 21/11/2023 </a> </li> </dd>
 
                             </ul>
-
                         </dd>
                     </dt>
+                    <dt class="esterni">Documentazione esterna
+                        <dd>
+                            <ul>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Analisi_dei_requisiti_v2.0.0.pdf">Analisi dei Requisiti v2.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_progetto_v1.0.0.pdf">Piano di Progetto v1.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_qualifica_v1.0.0.pdf">Piano di Qualifica v1.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Glossario.pdf">Glossario v1.0.0</a></li></dd>
+                            </ul>
+
+                        </dd>
+                    </dt> 
                 </div>
             </section>
 
