aggiunti verbali esterni

--- a/index.html
+++ b/index.html
@@ -118,9 +118,18 @@
                                 <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_qualifica_v1.0.0.pdf">Piano di Qualifica v1.0.0</a></li></dd>
                                 <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Glossario.pdf">Glossario v1.0.0</a></li></dd>
                             </ul>
-
                         </dd>
                     </dt> 
+                    <dt class="verbali">Verbali Esterni
+                        <dd>
+                            <ul>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Esterni/2023_11_24_v1.0.0.pdf">Verbale del 2023/11/24 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Esterni/2023_12_07_v1.0.0.pdf">Verbale del 2023/12/07 </a> </li> </dd>
+                                    <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Esterni/2024_02_23_v1.0.0.pdf">Verbale del 2024/02/23 </a> </li> </dd>
+                                   
+                            </ul>
+                        </dd>
+                    </dt>
                 </div>
             </section>
 
