spostati verbali interni dopo documentazione esterna

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <dl>
 
                         <ul>
-                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Lettera_di_Presentazione_v2.0.0.pdf">Lettera di presentazione</a> </li>  
-                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Preventivo costi/Preventivo_costi_ed_assunzione_impegni_v2.0.0.pdf">Preventivo costi e assunzione tempi</a> </li>
-                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Analisi capitolati/Analisi_capitolati_v2.0.0.pdf">Analisi capitolati</a> </li>
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Lettera_di_Presentazione_v2.0.0.pdf">Lettera di presentazione v2.0.0</a> </li>  
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Preventivo costi/Preventivo_costi_ed_assunzione_impegni_v2.0.0.pdf">Preventivo costi e assunzione tempi v2.0.0</a> </li>
+                            <li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/Candidatura/Analisi capitolati/Analisi_capitolati_v2.0.0.pdf">Analisi capitolati v2.0.0</a> </li>
                         </ul>
 
                     </dl>
@@ -96,6 +96,16 @@
                             </ul>
                         </dd>
                     </dt>
+                    <dt class="esterni">Documentazione esterna
+                        <dd>
+                            <ul>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Analisi_dei_requisiti_v2.0.0.pdf">Analisi dei Requisiti v2.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_progetto_v1.0.0.pdf">Piano di Progetto v1.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_qualifica_v1.0.0.pdf">Piano di Qualifica v1.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Glossario.pdf">Glossario v1.0.0</a></li></dd>
+                            </ul>
+                        </dd>
+                    </dt>
                     <dt class="verbali">Verbali Interni
                         <dd>
                             <ul>
@@ -107,16 +117,6 @@
                                     <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2024_02_24_v1.0.0.pdf">Verbale del 2024/02/24 </a> </li> </dd>
                                     <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2024_03_07_v1.0.0.pdf">Verbale del 2024/03/07 </a> </li> </dd>
                                     <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main/RTB/Verbali/Interni/2024_03_28_v1.0.0.pdf">Verbale del 2024/03/28 </a> </li> </dd>
-                            </ul>
-                        </dd>
-                    </dt>
-                    <dt class="esterni">Documentazione esterna
-                        <dd>
-                            <ul>
-                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Analisi_dei_requisiti_v2.0.0.pdf">Analisi dei Requisiti v2.0.0</a></li></dd>
-                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_progetto_v1.0.0.pdf">Piano di Progetto v1.0.0</a></li></dd>
-                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_qualifica_v1.0.0.pdf">Piano di Qualifica v1.0.0</a></li></dd>
-                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Glossario.pdf">Glossario v1.0.0</a></li></dd>
                             </ul>
                         </dd>
                     </dt> 
