aggiunta lettera di presentazione

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                                 <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_progetto_v1.0.0.pdf">Piano di Progetto v1.0.0</a></li></dd>
                                 <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Piano_di_qualifica_v1.0.0.pdf">Piano di Qualifica v1.0.0</a></li></dd>
                                 <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Glossario.pdf">Glossario v1.0.0</a></li></dd>
+                                <dd><li> <a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/blob/main/RTB/Documentazione%20Esterna/Lettera_di_presentazione_v1.0.0.pdf">Lettera di Presentazione</a></li></dd>
                             </ul>
                         </dd>
                     </dt>
