aggiunta immagine suddivisione oraria

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Il progetto sviluppato dal gruppo SWEet16 è l'applicazione <em>Easy Meal</em>.
             <p>Di seguito tutti i riferimenti:</p>
             <ul>
-                <li><a target="_blank" href="img/suddivisione-ore.jpg">Suddivisione ore individuali</a></li>
+                <li><a target="_blank" href="img/suddivisione-ore.png">Suddivisione ore individuali</a></li>
                 <li><a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/poc-main">Proof of Concept per RTB</a></li>
                 <li><a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/mvp-main">Minimul Viable Product per PB</a></li>
                 <li><a target="_blank" href="https://github.com/SWEet16-SWE-Group/docs/tree/main">Tutta la documentazione (PDF)</a></li>
